# bjiff-helper

./: .gitignore  16th BJIFF 影片信息（截至04.08）.xlsx  README.md  index.html  package-lock.json  package.json  vite.config.ts  第十六届北京国际电影节“北京展映”排片表.xlsx
docs/: BJIFF-排片助手-v1-规划.md  BJIFF-排片助手实施进展.md  电影节排片助手-v1-规划.md
scripts/: extract_film_metadata.py  extract_schedule.py
src/: App.tsx  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: FilmExplorer.tsx  ItineraryPanel.tsx  PreferencePanel.tsx  StatCard.tsx  TimelineView.tsx
src/data/: bjiff-film-metadata.json  bjiff-schedule.json
src/lib/: data-source.ts  desktop-api.ts  douban.ts  exporters.ts  film-metadata.ts  format.ts  persistence.ts  recommendation.ts  tauri-runtime.ts  types.ts
